# TouhouEngine

./: .clang-format  .gitignore  CMakeLists.txt
assets/shaders/: Sprite.hlsl
src/: CMakeLists.txt  Engine_main.cpp
src/Core/: Application.cpp  Application.hpp  CMakeLists.txt  Logger.h  Logger.hpp  MathUtils.hpp  StringUtils.cpp  StringUtils.hpp  Timer.cpp  Timer.hpp  Window.cpp  Window.hpp  XSRandom.hpp
src/Game/: Bullet.hpp  BulletManager.cpp  BulletManager.hpp  CMakeLists.txt
src/Graphics/: CMakeLists.txt  DX11Device.cpp  DX11Device.hpp  Shader.cpp  Shader.hpp  SpriteRenderer.cpp  SpriteRenderer.hpp  Texture.cpp  Texture.hpp  Vertex.hpp
src/pch/: pch.hpp
